[gd_scene load_steps=9 format=3 uid="uid://b3b04oeu6g6m5"]

[ext_resource type="Theme" uid="uid://bjgel0idhd2yw" path="res://themes/main_theme.tres" id="1_joc6a"]
[ext_resource type="Script" path="res://scenes/ui/change_list_menu.gd" id="2_jvb1g"]
[ext_resource type="Texture2D" uid="uid://bv4ioko8spwbb" path="res://images/ui/back.png" id="3_8w1eu"]
[ext_resource type="FontFile" uid="uid://bm7ei8ouuwcd4" path="res://fonts/Awe Mono Gold.ttf" id="4_62ilo"]
[ext_resource type="PackedScene" uid="uid://qlkvlclfyrf7" path="res://scenes/ui/team_option_button.tscn" id="5_kiklq"]
[ext_resource type="FontFile" uid="uid://j5gomqfo3au6" path="res://fonts/Varnished.ttf" id="5_lesd2"]

[sub_resource type="LabelSettings" id="LabelSettings_61pei"]
font = ExtResource("4_62ilo")
shadow_size = 0
shadow_color = Color(0.0910933, 0.0832, 0.32, 0.513726)

[sub_resource type="LabelSettings" id="LabelSettings_17jy0"]
font_size = 8
font_color = Color(1, 0.598667, 0.57, 1)
shadow_size = 0
shadow_color = Color(0, 0, 0, 0.478431)

[node name="ChangeListMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_joc6a")
script = ExtResource("2_jvb1g")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Items" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Items"]
layout_mode = 2

[node name="Back" type="Button" parent="MarginContainer/Items/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
icon = ExtResource("3_8w1eu")

[node name="Label" type="Label" parent="MarginContainer/Items/HBoxContainer2"]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("1_joc6a")
text = "changer liste"
label_settings = SubResource("LabelSettings_61pei")
horizontal_alignment = 1
autowrap_mode = 2

[node name="TeamOptionButton" parent="MarginContainer/Items" instance=ExtResource("5_kiklq")]
unique_name_in_owner = true
layout_mode = 2

[node name="ErrorInfo" type="Label" parent="MarginContainer/Items"]
unique_name_in_owner = true
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("5_lesd2")
label_settings = SubResource("LabelSettings_17jy0")
horizontal_alignment = 1
autowrap_mode = 2

[node name="Continue" type="Button" parent="MarginContainer/Items"]
layout_mode = 2
text = "Changer"

[connection signal="pressed" from="MarginContainer/Items/HBoxContainer2/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="MarginContainer/Items/Continue" to="." method="_on_continue_pressed"]
